--- a/oscar/templates/dashboard/reviews/review_list.html
+++ b/oscar/templates/dashboard/reviews/review_list.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/layout.html' %}
+{% extends "dashboard/layout.html" %}
 {% load currency_filters %}
 {% block body_class %}reviews{% endblock %}
 {% block title %}
@@ -24,61 +24,73 @@ Reviews | {{ block.super }}
 
 {% block dashboard_content %}
 
-<div class="sub-header">
-    {#<h2>{{ queryset_description }}</h2>#}
+<div class="well well-info">
+    <div class="sub-header"><h3>Quick Review Search</h3></div>
+    <form action="." method="get" class="form-inline">
+		{% include 'partials/form_fields_inline.html' with form=form %}
+        <button type="submit" class="btn btn-primary">Search</button>
+		<a href="{% url dashboard:reviews-list %}" class="btn">Reset</a>
+    </form>
 </div>
+
 {% if review_list|length %}
-<form action="." method="post" class="order_table">
+<form action="." method="post">
     {% csrf_token %}
-<table class="table table-striped table-bordered">
-    <tr>
-        <th></th>
-        <th>Review Title</th>
-        <th>Product</th>
-        <th>User</th>
-        <th>Score</th>
-        <th>Votes</th>
-        <th>Status</th>
-        <th>Date created</th>
-        <th></th>
-    </tr>
-    {% for review in review_list %}
-    <tr>
-        <td><input type="checkbox" name="selected_order" class="selected_order" value="{{ review.id }}"/>
-        <td>{{ review.title }}</td>
-        <td>
-            <a href='{% url catalogue:detail review.product.slug review.product.id %}'>
-                {{ review.product.title }}
-            </a>
-        </td>
-        <td>
-            <a href="{% url dashboard:user-detail review.user.username %}">
-                {{ review.get_reviewer_name }}
-            </a>
-        </td>
-        <td>
-            {{ review.score|floatformat:1 }} / 5.0
-        </td>
-        <td>{{ review.total_votes }}</td>
-        <td>
-        {% if review.status == 1 %}
-            <span class="label label-success">
-        {% elif review.status == 2 %}
-            <span class="label label-important">
-        {% else %}
-            <span class="label label-info">
-        {% endif %}
-                {{ review.get_status_display }}
-            </span>
-        </td>
-        <td>{{ review.date_created }}</td>
-        <td>
-            <a class="btn btn-success" href="{% url dashboard:reviews-update review.id %}">Edit</a>
-            <a class="btn btn-info" href="{% url catalogue:reviews-detail review.product.slug review.product.id review.id %}">View</a>
-        </td>
-    </tr>
-    {% endfor %}
-</table>
+    <table class="table table-striped table-bordered">
+        <tr>
+            <th></th>
+            <th>Review Title</th>
+            <th>Product</th>
+            <th>User</th>
+            <th>Score</th>
+            <th>Votes</th>
+            <th>Status</th>
+            <th>Date created</th>
+            <th></th>
+        </tr>
+        {% for review in review_list %}
+        <tr>
+            <td><input type="checkbox" name="selected_review" class="selected_review" value="{{ review.id }}"/>
+            <td>{{ review.title }}</td>
+            <td>
+                <a href='{% url catalogue:detail review.product.slug review.product.id %}'>
+                    {{ review.product.title }} </a>
+            </td>
+            <td>
+                <a href="{% url dashboard:user-detail review.user.username %}">
+                    {{ review.get_reviewer_name }}
+                </a>
+            </td>
+            <td>
+                {{ review.score|floatformat:1 }} / 5.0
+            </td>
+            <td>{{ review.total_votes }}</td>
+            <td>
+            {% if review.status == 1 %}
+                <span class="label label-success">
+            {% elif review.status == 2 %}
+                <span class="label label-important">
+            {% else %}
+                <span class="label label-info">
+            {% endif %}
+                    {{ review.get_status_display }}
+                </span>
+            </td>
+            <td>{{ review.date_created }}</td>
+            <td>
+                <a class="btn btn-success" href="{% url dashboard:reviews-update review.id %}">Edit</a>
+                <a class="btn btn-info" href="{% url catalogue:reviews-detail review.product.slug review.product.id review.id %}">View</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+
+    <div class="well well-danger">
+        Update status of selected reviews 
+        {{ review_form.status }}
+	<input type="hidden" name="action" value="update_selected_review_status" />
+        <button type="submit" class="btn btn-success">Update</button>
+    </div>
 
 {% if page_obj %}
     {% include "catalogue/partials/pagination.html" %}
