--- a/oscar/templates/dashboard/users/index.html
+++ b/oscar/templates/dashboard/users/index.html
@@ -23,36 +23,24 @@ Users | {{ block.super }}
 {% endblock header %}
 
 {% block dashboard_content %}
-<div class="sub-header">
-    <h2>{{ queryset_description }}</h2>
-</div>
 <div class="well well-info">
     <h3 class="app-ico ico_magnify icon">Search</h3>
     <form action="." method="get" class="form-inline">
         {% include "partials/form_fields_inline.html" with form=form %}
         <input type="submit" value="Search" class="btn btn-primary"/>
+		<a href="{% url dashboard:users-index %}" class="btn">Reset</a>
     </form>
+</div>
+<div class="sub-header">
+    <h2>{{ queryset_description }}</h2>
 </div>
 {% if user_list.count %}
 <form action="." method="post" class="form-inline">
     {% csrf_token %}
 
-<div class="well well-danger">
-    <h3 class="app-ico ico_sync icon">Bulk Actions</h3>
-    <label for="inlineCheckboxes">With selected users:</label>
-    <label>
-        <input type="radio" name="action" value="make_active" /> Make active
-    </label>
-    <label>
-        <input type="radio" name="action" value="make_inactive" /> Make inactive
-    </label>
-    <input type="submit" value="Go!" class="btn btn-primary" />
-</div>
-
 <table class="table table-striped table-bordered">
     <tr>
         <th></th>
-        <th>Username</th>
         <th>Email</th>
         <th>First name</th>
         <th>Last name</th>
@@ -65,7 +53,6 @@ Users | {{ block.super }}
     {% for user in user_list %}
     <tr>
         <td><input type="checkbox" name="selected_user" class="selected_user" value="{{ user.id }}"/>
-        <td>{{ user.username }}</td>
         <td>{{ user.email }}</td>
 		<td>{{ user.first_name }}</td>
 		<td>{{ user.last_name }}</td>
@@ -84,7 +71,18 @@ Users | {{ block.super }}
     {% include "catalogue/partials/pagination.html" %}
 {% endif %}
 
-<p></p>
+<div class="well well-danger">
+    <h3 class="app-ico ico_sync icon">Bulk Actions</h3>
+    <label for="inlineCheckboxes">With selected users:</label>
+    <label>
+        <input type="radio" name="action" value="make_active" /> Make active
+    </label>
+    <label>
+        <input type="radio" name="action" value="make_inactive" /> Make inactive
+    </label>
+    <input type="submit" value="Go!" class="btn btn-primary" />
+</div>
+
 
 </form>
 
