--- a/oscar/templates/dashboard/orders/order_list.html
+++ b/oscar/templates/dashboard/orders/order_list.html
@@ -99,7 +99,7 @@ Order management | {{ block.super }}
 		<td>{{ order.date_placed }}</td>
 		<td>{{ order.num_items }}</td>
         <td>{{ order.status }}</td>
-        <td>{{ order.user|default:"Anonymous" }}</td>
+        <td>{{ order.email }}</td>
         <td>{{ order.shipping_address|default:"-" }}</td>
         <td>{{ order.billing_address|default:"-" }}</td>
         <td>
