Removed references to 'username' in templates

--- a/oscar/templates/dashboard/users/detail.html
+++ b/oscar/templates/dashboard/users/detail.html
@@ -3,7 +3,7 @@
 {% block body_class %}users{% endblock %}
 
 {% block title %}
-User {{ user.username }} | {{ block.super }}
+User {{ user.email }} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
