--- a/oscar/templates/dashboard/ranges/range_product_list.html
+++ b/oscar/templates/dashboard/ranges/range_product_list.html
@@ -50,9 +50,9 @@ Products in range '{{ range.name }}' | {{ block.super }}
 				<thead>
 				<tr>
 					<th>Filename</th>
-					<th>New SKUs</th>
-					<th>Dupliate SKUs</th>
-					<th>Unknown SKUs</th>
+					<th>New products</th>
+					<th>Dupliate products</th>
+					<th>Unknown products</th>
 					<th>Date uploaded</th>
 				</tr>
 				</thead>
@@ -78,8 +78,10 @@ Products in range '{{ range.name }}' | {{ block.super }}
 			<table class="table table-striped table-bordered">
 				<tr>
 					<th></th>
-					<th>SKU</th>
+					<th>UPC</th>
 					<th>Title</th>
+					<th>Partner</th>
+					<th>Partner SKU</th>
 					<th>Price</th>
 					<th></th>
 				</tr>
@@ -88,8 +90,10 @@ Products in range '{{ range.name }}' | {{ block.super }}
 					<td>
 						<input type="checkbox" name="selected_product" value="{{ product.id }}" />
 					</td>
-					<td>{{ product.stockrecord.partner_sku }}</td>
+					<td>{{ product.upc|default:"-" }}</td>
 					<td>{{ product.get_title }}</td>
+					<td>{{ product.stockrecord.partner.name }}</td>
+					<td>{{ product.stockrecord.partner_sku }}</td>
 					<td>{{ product.stockrecord.price_incl_tax|currency }}</td>
 					<td>
 						<a class="btn btn-danger" href="#" data-behaviours="remove">Remove</a>
