Order lines now save the UPC of the product.
This can be useful for audit and for searching your order history.

--- a/oscar/templates/dashboard/orders/line_detail.html
+++ b/oscar/templates/dashboard/orders/line_detail.html
@@ -16,7 +16,7 @@ Order {{ order.number }} - Line #{{ line.id }} | {{ block.super }}
         <span class="divider">/</span>
     </li>
     <li>
-		<a href="{% url dashboard:order-detail order.number %}">{{ order.number }}</a>
+		<a href="{% url dashboard:order-detail order.number %}">#{{ order.number }}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active"><a href=".">Line #{{ line.id }}</a></li>
@@ -25,7 +25,7 @@ Order {{ order.number }} - Line #{{ line.id }} | {{ block.super }}
 
 {% block header %}
 <div class="page-header">
-    <h1>Order {{ order.number }} - Line #{{ line.id }}</h1>
+    <h1>Order #{{ order.number }} - Line #{{ line.id }}</h1>
 </div>
 {% endblock header %}
 
@@ -39,10 +39,10 @@ Order {{ order.number }} - Line #{{ line.id }} | {{ block.super }}
         		<th>Title</th><td>{{ line.title }}</td>
             </tr>
             <tr>
-        		<th>Quantity</th><td>{{ line.quantity }}</td>
+        		<th>UPC</th><td>{{ line.upc|default:"-" }}</td>
             </tr>
             <tr>
-        		<th>&nbsp;</th><td>&nbsp;</td>
+        		<th>Quantity</th><td>{{ line.quantity }}</td>
             </tr>
         </table>
     </div>
