--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -191,7 +191,7 @@ Basket | {{ block.super }}
 
     {% else %}
     <div class="row-fluid basket-title">
-        <h4 class="span8">To buy an item now, click "Move to cart"</h4>
+        <h4 class="span8">To buy an item now, click "Move to basket"</h4>
         <h4 class="span4">Price</h4>
     </div>
     <form action="{% url basket:saved %}" method="post" class="form-stacked later_summary" id="saved_basket_formset">
