--- a/oscar/templates/checkout/nav.html
+++ b/oscar/templates/checkout/nav.html
@@ -1,8 +1,8 @@
 <nav class="checkoutNav">
-	<ul class="nav row-fluid">
-	        <li class="step1 {% if step == 1 %}active{% else %}{% if step > 1 %}visited{% else %}disabled{% endif %}{% endif %} span3"><h3>1. Shipping address</h3></li>
-	        <li class="step2 {% if step == 2 %}active{% else %}{% if step > 2 %}visited{% else %}disabled{% endif %}{% endif %} span3"><h3>2. Shipping method</h3></li>
-	        <li class="step3 {% if step == 3 %}active{% else %}{% if step > 3 %}visited{% else %}disabled{% endif %}{% endif %} span3"><h3>3. Payment</h3></li>
-	        <li class="step4 {% if step == 4 %}active{% else %}disabled{% endif %} span3"><h3>Confirmation</h3></li>
-	</ul>
+<ul class="nav row-fluid">
+	<li class="step1 {% if step == 1 %}active{% else %}{% if step > 1 %}visited{% else %}disabled{% endif %}{% endif %} span3"><h3>1. Shipping address</h3></li>
+	<li class="step2 {% if step == 2 %}active{% else %}{% if step > 2 %}visited{% else %}disabled{% endif %}{% endif %} span3"><h3>2. Shipping method</h3></li>
+	<li class="step3 {% if step == 3 %}active{% else %}{% if step > 3 %}visited{% else %}disabled{% endif %}{% endif %} span3"><h3>3. Payment</h3></li>
+	<li class="step4 {% if step == 4 %}active{% else %}disabled{% endif %} span3"><h3>4. Confirmation</h3></li>
+</ul>
 </nav>
