Updated basket view to show better validation messages

--- a/oscar/templates/partials/alert_messages.html
+++ b/oscar/templates/partials/alert_messages.html
@@ -2,7 +2,7 @@
 {% for message in messages %}
 	<div class="alert fade in alert-{{ message.tags }}">
 		<a class="close" data-dismiss="alert">x</a>
-		{{ message }}
+		{{ message|linebreaks }}
 	</div>
 {% endfor %}
 </div>
