--- a/oscar/templates/dashboard/orders/order_detail.html
+++ b/oscar/templates/dashboard/orders/order_detail.html
@@ -277,9 +277,9 @@ Order {{ order.number }} | {{ block.super }}
 					{% for event in events %}
 					{% with line_qtys=event.line_quantities.all %}
 					<tr>
-						<td rowspan="{{ line_qtys|length }}">{{ event.date }}</td>
-						<td rowspan="{{ line_qtys|length }}">{{ event.event_type.name }}</td>
-						<td rowspan="{{ line_qtys|length }}">{{ event.amount|currency }}</td>
+						<td rowspan="{{ line_qtys.count }}">{{ event.date }}</td>
+						<td rowspan="{{ line_qtys.count }}">{{ event.event_type.name }}</td>
+						<td rowspan="{{ line_qtys.count }}">{{ event.amount|currency }}</td>
 						<td>
 							<table>
 								{% for line_qty in event.line_quantities.all %}
