Fix for issue #59018

--- a/oscar/static/oscar/less/page/osc_layout.less
+++ b/oscar/static/oscar/less/page/osc_layout.less
@@ -87,3 +87,9 @@ form {
         list-style:none;
     }
 }
+
+.control-label.required:after {
+    content: "*";
+    padding:0 0 0 3px;
+    color: #FF0000;
+}
