--- a/oscar/templates/dashboard/users/detail.html
+++ b/oscar/templates/dashboard/users/detail.html
@@ -123,6 +123,10 @@ User {{ user.email }} | {{ block.super }}
             <h2>Addresses</h2>
             <div class="row-fluid">
         	{% for address in user.addresses.all %}
+                {% if forloop.counter|divisibleby:5 %}
+                </div><div class="row-fluid">
+                {% endif %}
+
                 <div class="span3">
             	    <div class="well well-info">
             			{% for field in address.active_address_fields %}
@@ -130,6 +134,7 @@ User {{ user.email }} | {{ block.super }}
             			{% endfor %}
             		</div>
             	</div>
+
         	{% endfor %}
             </div>
         </div>
