--- a/oscar/templates/checkout/thank_you.html
+++ b/oscar/templates/checkout/thank_you.html
@@ -103,8 +103,9 @@ with us regarding your order.</p>
     <div class="sub-header">
         <h4>Tracking your order</h4>
     </div>
-    <p>You can track the status of your order at the following URL:</p>
-    <p><a href="{% url customer:anon-order order.number order.verification_hash %}"> {% url customer:anon-order order.number order.verification_hash %}</a></p>
+	<p>You can
+	<a href="{% url customer:anon-order order.number order.verification_hash %}">track the status of your order</a>.</p>
+	</p>
 {% endif %}
 
 <div class="form-actions">
