--- a/oscar/templates/catalogue/partials/product.html
+++ b/oscar/templates/catalogue/partials/product.html
@@ -1,10 +1,14 @@
 {% load currency_filters %}
 {% load basket_tags %}
-{% load product_tags %}
+{% load thumbnail %}
+
 <article class="product_pod">
-	{% product_image product as product_image %}
     <div class="image_container">
-        <a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
+		{% with image=product.primary_image %}
+		{% thumbnail image.original "400x400" upscale=False as thumb %}
+		<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ thumb.url }}" alt="{{ product.get_title }}"></a>
+		{% endthumbnail %}
+		{% endwith %}
     </div>
 
     {% block product_review %}
