--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -39,7 +39,7 @@
             <dl class='bar-chart'> 
                 {% for item in hourly_report_dict.order_total_hourly %}
                     <dd class='bar-layer'>
-                        <em>{{ item.end_time|date:"G" }}h</em>
+                        <em>{{ item.end_time|date:"G:i" }}</em>
                         <span style="height: {{ item.percentage }}%;" >
                             <p{% if item.percentage == 0 %} style="display: none;"{% endif %}>{{ item.total_incl_tax|currency }}</p>
                         </span>
