Fix for issue #59467

--- a/oscar/templates/dashboard/orders/order_detail.html
+++ b/oscar/templates/dashboard/orders/order_detail.html
@@ -189,7 +189,7 @@ Order {{ order.number }} | {{ block.super }}
 							</select>
 						</label>
 						<label class="radio inline">
-							<input type="text" name="reference" value="" /> with reference
+							with reference <input type="text" name="reference" value="" />
 						</label>
 					</div>
 				</div>
@@ -207,7 +207,7 @@ Order {{ order.number }} | {{ block.super }}
 							</select>
 						</label>
 						<label class="radio inline">
-							<input type="text" name="amount" value="" /> with amount
+							with amount <input type="text" name="amount" value="" /> 
 						</label>
 					</div>
 				</div>
