--- a/oscar/templates/promotions/singleproduct.html
+++ b/oscar/templates/promotions/singleproduct.html
@@ -1,6 +1,6 @@
 {% load currency_filters %}
 {% load basket_tags %}
-{% load product_tags %}
+{% load thumbnail %}
 
 <article class="well promotion_single">
     <div class="sub-header">
@@ -8,9 +8,12 @@
     </div>
     <div class="row-fluid">
     	<div class="span3">
-    		{% product_image product as product_image %}
     		<div class="image_container"> 
-    			<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
+				{% with image=product.primary_image %}
+				{% thumbnail image.original "400x400" upscale=False as thumb %}
+				<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ thumb.url }}" alt="{{ product.get_title }}"></a>
+				{% endthumbnail %}
+				{% endwith %}
     		</div>    
     	</div>
     	<div class="span9">
