--- a/oscar/templates/dashboard/orders/order_list.html
+++ b/oscar/templates/dashboard/orders/order_list.html
@@ -131,5 +131,6 @@ Order management | {{ block.super }}
 {% endblock dashboard_content %}
 
 {% block onbodyload %}
+oscar.dashboard.orderTable.init();
 oscar.dashboard.search.init();
 {% endblock onbodyload %}
