Slight rearrangement of order JS for checkboxes

--- a/oscar/templates/dashboard/orders/order_list.html
+++ b/oscar/templates/dashboard/orders/order_list.html
@@ -131,6 +131,6 @@ Order management | {{ block.super }}
 {% endblock dashboard_content %}
 
 {% block onbodyload %}
-oscar.dashboard.orderTable.init();
+oscar.dashboard.orders.initTable();
 oscar.dashboard.search.init();
 {% endblock onbodyload %}
