Enable generating reports as html and csv.

--- a/oscar/templates/dashboard/reports/index.html
+++ b/oscar/templates/dashboard/reports/index.html
@@ -31,5 +31,9 @@ Reports | {{ block.super }}
     </div>
 </form>
 
+{% if report %}
+    {{ report }}
+{% endif %}
+
 {% endblock dashboard_content %}
 
