Fixed cancel link URL in voucher dashboard

--- a/oscar/templates/dashboard/vouchers/voucher_form.html
+++ b/oscar/templates/dashboard/vouchers/voucher_form.html
@@ -32,7 +32,7 @@
 	{% block form_actions %}
 	<div class="form-actions">
 		<button class="btn btn-primary btn-large" type="submit">Save</button> or
-		<a href="{% url dashboard:range-list %}">cancel</a>
+		<a href="{% url dashboard:voucher-list %}">cancel</a>
 	</div>
 	{% endblock form_actions %}
 </form>
