--- a/oscar/templates/dashboard/ranges/range_form.html
+++ b/oscar/templates/dashboard/ranges/range_form.html
@@ -2,7 +2,7 @@
 {% load currency_filters %}
 
 {% block title %}
-Create range | Range management | {{ block.super }}
+{{ title }} | Range management | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -15,13 +15,13 @@ Create range | Range management | {{ block.super }}
         <a href="{% url dashboard:range-list %}">Ranges</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">Create range</a></li>
+	<li class="active"><a href=".">{{ title }}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-	<h1>Create range</h1>
+	<h1>{{ title }}</h1>
 </div>
 {% endblock header %}
 
