removed truncation off product listed titles

--- a/oscar/templates/catalogue/partials/product.html
+++ b/oscar/templates/catalogue/partials/product.html
@@ -25,7 +25,7 @@
         {% endwith %}
     {% endblock product_review %}
     
-    <h3><a href="{{ product.get_absolute_url }}">{{ product.get_title|truncatewords:7 }}</a></h3>
+    <h3><a href="{{ product.get_absolute_url }}">{{ product.get_title }}</a></h3>
     
     {% if product.is_group %}
         <h4 class="group-price"><span>From</span> <strong>{{ product.min_variant_price_incl_tax|currency }}</strong></h4>
