Changes to the Oscar - 0.2 beta 2

--- a/oscar/static/oscar/less/page/checkout.less
+++ b/oscar/static/oscar/less/page/checkout.less
@@ -84,6 +84,9 @@
     li {
         width: @third;
         float: left;
+        .default-address {
+            background-color: @grayLighter;
+      }
     }
   }
   .well {
