--- a/oscar/static/oscar/less/page/product_page.less
+++ b/oscar/static/oscar/less/page/product_page.less
@@ -44,6 +44,8 @@
     margin-top:10px;
     margin-bottom: 10px;
     font-size: @baseFontSize + 3;
+    overflow: hidden;
+    text-overflow: ellipsis;
     small {
       font-size: @baseFontSize - 1;
     }
