--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -118,7 +118,7 @@
 
 	{% block product_categories %}
     <div class="sub-header">
-        <h2>Categories</h2>
+        <h2>Reviews</h2>
     </div>
     <ul class="pills">
         {% for category in product.categories.all %}
