updated captions in dashboard, moved customers table togeather in dash, added previous links to checkout nav, fixed layout in review all tempate

--- a/oscar/static/oscar/less/dashboard.less
+++ b/oscar/static/oscar/less/dashboard.less
@@ -100,6 +100,11 @@ button {
 h3 {
   margin-bottom:@baseLineHeight / 4;
 }
+caption {
+  font-weight: bold;
+  font-size: 14px;
+  margin-bottom: 8px;
+}
 .search-adv {
   .control-group.pull-left {
     > label {
