--- a/oscar/static/oscar/less/page/checkout.less
+++ b/oscar/static/oscar/less/page/checkout.less
@@ -107,6 +107,10 @@
         }
     }
   }
+  .well-info.default-address {
+    background-color: @successBackground;
+    border-color: @successBorder;
+  }
   .alert-actions {
     .clearfix();
     form,
